welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:10: error: identifier expected but integer literal found.
  return array[num - 1]
                     ^golomb:11: error: ']' expected but '}' found.
} 
^